--- a/src/styles/components/Earth.css
+++ b/src/styles/components/Earth.css
@@ -8,17 +8,22 @@
   width: 30vw;
   aspect-ratio: 1;
 
-  animation: revolve 10s linear infinite;
+  animation: revolve 365s linear infinite;
+  transform-origin: center;
 }
 
 .earth {
   position: absolute;
 
-  transform: translate(-40%, 50%);
+  transform: rotate(23deg);
 
   width: 5vw;
   aspect-ratio: 1;
 
   border-radius: 50%;
-  background-color: blue;
+  
+  background: url(../../assets/earth.png);
+  background-size: 100% 100%;
+
+  animation: revolve 1s linear infinite;
 }
