--- a/src/styles/components/Sun.css
+++ b/src/styles/components/Sun.css
@@ -1,4 +1,4 @@
-@import '../animation/Rotate.css';
+@import '../animation/Revolve.css';
 
 .sun {
   position: absolute;
@@ -8,14 +8,22 @@
 
   width: 10vw;
   aspect-ratio: 1;
-  
+}
+
+.sun::before {
+  content: '';
+  position: absolute;
+
+  width: 10vw;
+  aspect-ratio: 1;
+
   border-radius: 50%;
   box-shadow:
-  0 0 2rem red,
-  0 0 4rem orange;
+    0 0 2rem red,
+    0 0 4rem orange;
 
   background: url(../../assets/sun.jpg);
   background-size: 200% 100%;
 
-  animation: rotate 10s linear infinite;
+  animation: revolve 27s linear infinite;
 }
