--- a/src/styles/components/Earth.css
+++ b/src/styles/components/Earth.css
@@ -2,23 +2,24 @@
 
 .earth-orbit {
   position: absolute;
-  top: -100%;
-  left: -100%;
+  top: -250%;
+  left: -250%;
 
   width: 30vw;
   aspect-ratio: 1;
 
-  /* border-style: solid;
-  border-color: white;
-  border-radius: 50%; */
+  border: solid 0.01rem gray;
+  border-radius: 50%;
 
   animation: revolve 365s linear infinite;
 }
 
 .earth {
   position: absolute;
-  
-  width: 5vw;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 3vw;
   aspect-ratio: 1;
 }
 
@@ -26,9 +27,7 @@
   content: '';
   position: absolute;
 
-  transform: rotate(23deg);
-
-  width: 5vw;
+  width: 3vw;
   aspect-ratio: 1;
 
   border-radius: 50%;
@@ -41,21 +40,25 @@
 
 .moon-orbit {
   position: absolute;
-  top: -50%;
-  left: -50%;
-
-  width: 10vw;
+  top:-100%;
+  left: -100%;
+  
+  width: 9vw;
   aspect-ratio: 1;
 
-  /* border-style: solid;
-  border-color: white;
-  border-radius: 50%; */
+  border: solid 0.01rem gray;
+  border-radius: 50%;
 
   animation: revolve 1s linear infinite;
 }
 
 .moon{
-  width: 2vw;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+
+  width: 1vw;
   aspect-ratio: 1;
 
   background: url(../../assets/moon.png);
