--- a/src/styles/components/Sun.css
+++ b/src/styles/components/Sun.css
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 5vw;
+  width: 5rem;
   aspect-ratio: 1;
 }
 
@@ -14,7 +14,7 @@
   content: '';
   position: absolute;
 
-  width: 5vw;
+  width: 5rem;
   aspect-ratio: 1;
 
   border-radius: 50%;
