--- a/src/styles/components/Earth.css
+++ b/src/styles/components/Earth.css
@@ -1,4 +1,5 @@
 @import '../animation/Revolve.css';
+@import '../animation/Rotate.css';
 
 .earth-orbit {
   position: absolute;
@@ -17,7 +18,6 @@
 .earth {
   position: absolute;
   top: 50%;
-  transform: translate(-50%, -50%);
 
   width: 3rem;
   aspect-ratio: 1;
@@ -35,13 +35,13 @@
   background: url(../../assets/earth.png);
   background-size: 100% 100%;
 
-  animation: revolve 1s linear infinite;
+  animation: rotate 1s linear infinite;
 }
 
 .moon-orbit {
   position: absolute;
-  top:-100%;
-  left: -100%;
+  top:-150%;
+  left: -150%;
   
   width: 9rem;
   aspect-ratio: 1;
