--- a/src/styles/components/Mercury.css
+++ b/src/styles/components/Mercury.css
@@ -1,31 +1,17 @@
-@import '../animation/Revolve.css';
-@import '../animation/Rotate.css';
-
 .mercury-orbit {
-  position: absolute;
   top: -100%;
   left: -100%;
 
   width: 10rem;
-  aspect-ratio: 1;
 
-  border: solid 0.01rem gray;
-  border-radius: 50%;
-
-  animation: revolve 88s linear infinite;
+  animation-duration: 88s;
 }
 
 .mercury {
-  position: absolute;
-  top: 50%;
-
   width: 1rem;
-  aspect-ratio: 1;
-
-  border-radius: 50%;
 
   background: url(../../assets/mercury.png);
   background-size: 100% 100%;
 
-  animation: rotate 59s linear infinite;
+  animation-duration: 59s;
 }
