refactor: 파일 위치 변경
파일 위치 변경 및 css 일부 수정

--- a/src/styles/components/planetary-system/Earth.css
+++ b/src/styles/components/planetary-system/Earth.css
@@ -1,10 +1,10 @@
-@import '../animation/Rotate.css';
+@import '../../animation/Rotate.css';
 
 .earth-orbit {
-  top: -300%;
-  left: -300%;
+  top: -150%;
+  left: -150%;
 
-  width: 30rem;
+  width: 20rem;
 
   animation-duration: 365s;
 }
@@ -26,17 +26,17 @@
 
   border-radius: 50%;
 
-  background: url(../../assets/earth.png);
+  background: url(../../../assets/earth.png);
   background-size: 100% 100%;
 
   animation: rotate 1s linear infinite;
 }
 
 .moon-orbit {
-  top: -100%;
-  left: -100%;
+  top: -70%;
+  left: -70%;
 
-  width: 6rem;
+  width: 4rem;
 
   animation-duration: 1s;
 }
