--- a/src/styles/components/planetary-system/Mars.css
+++ b/src/styles/components/planetary-system/Mars.css
@@ -1,8 +1,8 @@
 .mars-orbit {
-  top: -400%;
-  left: -400%;
+  top: -250%;
+  left: -250%;
 
-  width: 40rem;
+  width: 30rem;
 
   animation-duration: 687s;
 }
@@ -10,7 +10,7 @@
 .mars {
   width: 2rem;
 
-  background: url(../../assets/mars.png);
+  background: url(../../../assets/mars.png);
   background-size: 100% 100%;
 
   animation-duration: 1s;
