--- a/src/styles/components/planetary-system/Neptune.css
+++ b/src/styles/components/planetary-system/Neptune.css
@@ -1,16 +1,16 @@
 .neptune-orbit {
-  top: -800%;
-  left: -800%;
+  top: -700%;
+  left: -700%;
 
-  width: 80rem;
+  width: 75rem;
 
   animation-duration: 60182s;
 }
 
 .neptune {
-  width: 4rem;
+  width: 3.5rem;
 
-  background: url(../../assets/neptune.png);
+  background: url(../../../assets/neptune.png);
   background-size: 100% 100%;
 
   animation-duration: 0.6s;
