--- a/src/styles/components/planetary-system/Sun.css
+++ b/src/styles/components/planetary-system/Sun.css
@@ -1,9 +1,10 @@
-@import '../animation/Rotate.css';
+@import '../../animation/Rotate.css';
 
 .sun {
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
 
   width: 5rem;
   aspect-ratio: 1;
@@ -12,7 +13,8 @@
 .sun::before {
   content: '';
   position: absolute;
-
+  top: 50%;
+  left: 50%;
   width: 5rem;
   aspect-ratio: 1;
 
@@ -21,7 +23,7 @@
     0 0 2rem red,
     0 0 4rem orange;
 
-  background: url(../../assets/sun.jpg);
+  background: url(../../../assets/sun.jpg);
   background-size: 200% 100%;
 
   animation: rotate 27s linear infinite;
