--- a/src/styles/components/planetary-system/Venus.css
+++ b/src/styles/components/planetary-system/Venus.css
@@ -1,8 +1,8 @@
 .venus-orbit {
-  top: -200%;
-  left: -200%;
+  top: -80%;
+  left: -80%;
 
-  width: 20rem;
+  width: 13rem;
 
   animation-duration: 225s;
 }
@@ -10,7 +10,7 @@
 .venus {
   width: 2rem;
 
-  background: url(../../assets/venus.png);
+  background: url(../../../assets/venus.png);
   background-size: 100% 100%;
 
   animation-duration: 117s;
