feat: Home 페이지 생성 #9
Home 페이지 생성

--- a/src/styles/components/planetary-system/Earth.css
+++ b/src/styles/components/planetary-system/Earth.css
@@ -46,6 +46,6 @@
 
   width: 1rem;
 
-  background: url(../../assets/moon.png);
+  background: url(../../../assets/moon.png);
   background-size: 100% 100%;
 }
