desing: 속도 조절 슬라이더 UI 구성 #9
애니메이션 속도 조절을 위한 슬라이더 UI 구성
라디오 버튼과 애니메이션을 조합하여 구성

--- a/src/styles/components/planetary-system/common.css
+++ b/src/styles/components/planetary-system/common.css
@@ -1,5 +1,5 @@
-@import '../animation/Revolve.css';
-@import '../animation/Rotate.css';
+@import '../../animation/Revolve.css';
+@import '../../animation/Rotate.css';
 
 .orbit {
   position: absolute;
