--- a/src/styles/components/planetary-system/Uranos.css
+++ b/src/styles/components/planetary-system/Uranos.css
@@ -1,18 +1,17 @@
 .uranos-orbit {
+  --animation-duration: 30689s;
+
   top: -600%;
   left: -600%;
 
   width: 65rem;
-
-  animation-duration: 30689s;
 }
 
 .uranos {
+  --animation-duration: 0.7s;
+
   width: 3.5rem;
 
   background: url(../../../assets/uranos.png);
   background-size: 100% 100%;
-
-
-  animation-duration: 0.7s;
 }
