--- a/src/styles/components/planetary-system/Mercury.css
+++ b/src/styles/components/planetary-system/Mercury.css
@@ -1,17 +1,17 @@
 .mercury-orbit {
+  --animation-duration: 88s;
+
   top: -25%;
   left: -25%;
 
   width: 7.5rem;
-
-  animation-duration: 88s;
 }
 
 .mercury {
+  --animation-duration: 59s;
+
   width: 1rem;
 
   background: url(../../../assets/mercury.png);
   background-size: 100% 100%;
-
-  animation-duration: 59s;
 }
