--- a/src/styles/components/planetary-system/Neptune.css
+++ b/src/styles/components/planetary-system/Neptune.css
@@ -1,17 +1,17 @@
 .neptune-orbit {
+  --animation-duration: 60182s;
+
   top: -700%;
   left: -700%;
 
   width: 75rem;
-
-  animation-duration: 60182s;
 }
 
 .neptune {
+  --animation-duration: 0.6s;
+
   width: 3.5rem;
 
   background: url(../../../assets/neptune.png);
   background-size: 100% 100%;
-
-  animation-duration: 0.6s;
 }
