--- a/src/styles/components/planetary-system/Venus.css
+++ b/src/styles/components/planetary-system/Venus.css
@@ -1,17 +1,17 @@
 .venus-orbit {
+  --animation-duration: 225s;
+
   top: -80%;
   left: -80%;
 
   width: 13rem;
-
-  animation-duration: 225s;
 }
 
 .venus {
+  --animation-duration: 117s;
+
   width: 2rem;
 
   background: url(../../../assets/venus.png);
   background-size: 100% 100%;
-
-  animation-duration: 117s;
 }
