--- a/src/styles/components/planetary-system/common.css
+++ b/src/styles/components/planetary-system/common.css
@@ -26,3 +26,23 @@
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
+
+.speed-05,
+.speed-05::before {
+  animation-duration: calc(var(--animation-duration) * 2);
+}
+
+.speed-10,
+.speed-10::before {
+  animation-duration: var(--animation-duration);
+}
+
+.speed-15,
+.speed-15::before {
+  animation-duration: calc(var(--animation-duration) * 0.75);
+}
+
+.speed-20,
+.speed-20::before {
+  animation-duration: calc(var(--animation-duration) * 0.5);
+}
