--- a/src/styles/components/common/MenuBar.css
+++ b/src/styles/components/common/MenuBar.css
@@ -1,4 +1,5 @@
 .menuBar {
+  position: absolute;
   width: 100%;
 
   display: flex;
@@ -93,6 +94,7 @@
 .speedSlider::before {
   content: '';
   position: absolute;
+
   width: 80%;
 
   transform: translate(10%, 25%);
@@ -103,6 +105,7 @@
   display: block;
 
   position: absolute;
+
   width: 1rem;
   height: 1rem;
   transform: translate(-50%, 0);
