--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -1,9 +1,29 @@
 .home {
+  position: absolute;
   display: flex;
   flex-direction: column;
+
+  align-items: center;
 
   width: 100%;
   height: 100%;
 
-  padding: 0 2rem 0 2rem;
+}
+
+.display {
+  position: absolute;
+  top: 15%;
+  display: flex;
+
+  width: 90%;
+  height: 80%;
+
+  justify-content: center;
+  align-items: center;
+
+
+  border: solid 2px white;
+  border-radius: 5%;
+
+  overflow: hidden;
 }
