--- a/src/styles/components/Home/Display.css
+++ b/src/styles/components/Home/Display.css
@@ -1,4 +1,3 @@
-
 .display {
   position: absolute;
   top: 15%;
@@ -9,10 +8,29 @@
 
   justify-content: center;
   align-items: center;
+}
 
+.zoomButtonContainer {
+  position: absolute;
+  top: 85%;
+  left: 90%;
 
-  border: solid 2px white;
-  border-radius: 5%;
+  display: flex;
+  width: 10rem;
+  height: 4rem;
+  gap: 2rem;
+  
+  button{
+    width: 100%;
+    height: 100%;
+    background: none;
 
-  overflow: hidden;
+    border: solid 0.2rem white;
+    border-radius: 20%;
+    
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    overflow: hidden;
+  }
 }
