design: css 수정 #12
scale 조정 시 부드럽게 바뀌도록 조정
display 드래그 시 커서 모양 변경

--- a/src/styles/components/Home/Display.css
+++ b/src/styles/components/Home/Display.css
@@ -8,6 +8,16 @@
 
   justify-content: center;
   align-items: center;
+
+  transition: transform 0.15s ease-in-out;
+}
+
+.display:hover {
+  cursor: grab;
+}
+
+.display:active {
+  cursor: grabbing;
 }
 
 .zoomButtonContainer {
