--- a/src/styles/components/Home/Display.css
+++ b/src/styles/components/Home/Display.css
@@ -1,15 +1,12 @@
 .display {
   position: absolute;
   top: 15%;
-  display: flex;
 
   width: 90%;
   height: 80%;
 
-  justify-content: center;
-  align-items: center;
-
-  transition: transform 0.15s ease-in-out;
+  border: solid 0.3rem white;
+  overflow: hidden;
 }
 
 .display:hover {
@@ -18,6 +15,18 @@
 
 .display:active {
   cursor: grabbing;
+}
+
+.planetary-system{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: transform 0.15s ease-in-out;
 }
 
 .zoomButtonContainer {
