fix: zoom 버튼 위치 수정 #14
zoom 버튼 위치 수정

--- a/src/styles/components/Home/Display.css
+++ b/src/styles/components/Home/Display.css
@@ -31,8 +31,8 @@
 
 .zoomButtonContainer {
   position: absolute;
-  top: 85%;
-  left: 90%;
+  bottom: 5%;
+  right: 3%;
 
   display: flex;
   width: 10rem;
